# pointcloud-scanner

./: .gitignore  README.md
pointcloud_saver/: CMakeLists.txt  package.xml
pointcloud_saver/src/: pointcloud_saver.cpp
scan_combiner/: CMakeLists.txt  package.xml
scan_combiner/launch/: scanner.launch
scan_combiner/src/: scan_combiner.cpp
scanner_description/: CMakeLists.txt  package.xml
scanner_description/config/: model_view.rviz
scanner_description/launch/: description.launch  view.launch
scanner_description/meshes/: tripod.stl
scanner_description/urdf/: scanner.urdf.xacro  scanner_description.urdf
