<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_saver</name>
  <version>1.0</version>
  <description>The pointcloud_saver package saves a 3d pointcloud to a file</description>

  <maintainer email="bafenijn@gmail.com">Bram Fenijn (vidicon)</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>rosunit</test_depend>
</package>
