<?xml version="1.0"?>
<package format="2">
  <name>scan_combiner</name>
  <version>1.0.0</version>
  <description> The scan_combiner package combines 2d scan data into a 3d pointcloud </description>
  <license>GPLv3</license>
  <maintainer email="bafenijn@gmail.com">Bram Fenijn (vidicon)</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
</package>
