<?xml version="1.0"?>
<package format="2">
  <name>scanner_description</name>
  <version>1.0.0</version>
  <description>
    3D models of the pointcloud scanner for visualization
  </description>
  <license>BSD</license>
  <maintainer email="Bafenijn@gmail.com">Bram Fenijn</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
